# ewms-message-queue-service

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: image-publish.yml  wipac-cicd.yml
Docs/: README.md
Docs/.openapi-generator/: FILES
Docs/Apis/: DefaultApi.md
Docs/Models/: JWKSetResponse.md  MQGroupActivationRequest.md  MQGroupObject.md  MQGroupObjectAndProfiles.md  MQGroupObject_criteria.md  MQGroupObject_criteria_anyOf.md  MQGroupReservationRequest.md  MQProfileObject.md  PublicMQProfilesResponse.md  QGroupObject.md  QGroupObject_criteria.md  QueueObject.md  TaskDirectiveObject.md  __well_known_jwks_json_get_200_response.md  __well_known_jwks_json_get_400_response.md  _mq_group_post_200_response.md  _mq_group_post_202_response.md  _mq_group_post_400_response.md  _mqbroker_issuer__well_known_jwks_json_get_200_response.md  _mqbroker_issuer__well_known_jwks_json_get_400_response.md  _v0___well_known_jwks_json_get_200_response.md  _v0___well_known_jwks_json_get_400_response.md  _v0__well_known_jwks_json_get_200_response.md  _v0__well_known_jwks_json_get_400_response.md  _v0_mq_group_post_200_response.md  _v0_mq_group_post_400_response.md  _v0_mq_profile__mqid__get_400_response.md  _v0_mq_profiles__mqid__get_400_response.md  _v0_mqs_get_400_response.md  _v0_mqs_mq_profiles__mqid__get_400_response.md  _v1_mqs_get_400_response.md  criteria.md  (+3 more)
examples/: request_task.py
mqs/: __init__.py  __main__.py  config.py  jwks_auth.py  openapi.json  scheduling.py  server.py  utils.py
schema-precompiled/: openapi_prebuild.json
(+39 files in other folders)
