# pyproject.toml

[project]
dependencies = [
    "PyJWT",
    "jsonschema",
    "motor",
    "oms-mqclient[rabbitmq]",
    "openapi-core",
    "wipac-dev-tools",
    "wipac-rest-tools[telemetry]",
] # (can remove comment) originally migrated from 'setup.cfg' by 'WIPACrepo/wipac-dev-py-setup-action' github action package

[project.optional-dependencies] # (can remove comment) originally migrated from 'setup.cfg' by 'WIPACrepo/wipac-dev-py-setup-action' github action package
tests = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "nest-asyncio",
]
dev = [
    "mypy",
    "black",
]
mypy = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "nest-asyncio",
    "mypy",
    "black",
]
