# pyproject.toml

[project]
dependencies = [
    "PyJWT",
    "jsonschema",
    "motor",
    "oms-mqclient[rabbitmq]",
    "openapi-core",
    "wipac-dev-tools",
    "wipac-rest-tools[telemetry]",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "nest-asyncio",
]
dev = [
    "mypy",
    "black",
]
mypy = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "nest-asyncio",
    "mypy",
    "black",
]
